@@ -117,6 +117,16 @@ template<class T> inline T Lerp(float t, T v1, T v2) {
 	return v1 + t * (v2 - v1);
 }
 
+template<class T> inline T LerpWithStep(float t, T v1, T v2, float step) {
+	const float lerp = Lerp(t, v1, v2);
+
+	if (step <= 0.f)
+		return lerp;
+
+	// Linear interpolation with steps
+	return floorf(lerp / step) * step;
+}
+
 template<class T> inline T Cerp(float t, T v0, T v1, T v2, T v3) {
 	// Cubic interpolation
 	return v1 + .5f *
