@@ -7,7 +7,7 @@ scene.camera.lookat.target = -1.42516184 2.97771811 -3.67405295
 ################################################################################
 scene.textures.imgtex.file = pattern-7.jpg
 scene.textures.imgtex.gamma = 1.0
-scene.textures.imgtex.randomizedtiling.enable = 1
+scene.textures.imgtex.randomizedtiling.enable = 0
 #scene.textures.imgtex.mapping.uvscale = 2 2
 ##
 # uvrandommapping2d
@@ -17,8 +17,9 @@ scene.textures.imgtex.mapping.type = uvrandommapping2d
 scene.textures.imgtex.mapping.seed.type = object_id
 # If seed type is "triangle_aov", the index of the AOV to use
 scene.textures.imgtex.triangleaov.index = 0
-# Rotation Min/Max range
-scene.textures.imgtex.mapping.rotation = 0 360
+# Rotation Min/Max range and (optional) step
+#scene.textures.imgtex.mapping.rotation = 0 360
+scene.textures.imgtex.mapping.rotation = 0 360 45
 # Scale Min/Max range
 scene.textures.imgtex.mapping.uvscale = 2 2 2 2
 # If to use the same scale for U and V or decouple them
